# puchi-sekai

./: .gitignore  Cargo.toml  README.md  flake.nix  package-ipc.nix  package.json  package.nix  rust-toolchain.toml
common/: Cargo.toml
common/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs  main.rs
main/: index-modal.html  index.html  package.json  pnpm-lock.yaml
main/src/: App.css  App.tsx
main/src-tauri/: Cargo.toml
main/src-tauri/src/: config.rs  lib.rs
main/src-tauri/src/handlers/: event.rs  mod.rs
modal/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
modal/src/: App.css  App.tsx  Editor.css  Editor.tsx
modal/src-tauri/: Cargo.toml  tauri.conf.json
modal/src-tauri/src/: lib.rs  main.rs
modal/src-tauri/src/handlers/: ipc.rs
src/: App.css  App.tsx  Live2DModel.tsx  Modal.tsx  main-modal.tsx  types.tsx  zip.tsx
src-ipc/: Cargo.toml
src-ipc/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  event.rs  lib.rs  main.rs
src-tauri/src/handlers/: chat.rs  event.rs  mod.rs  model.rs
