[package]
name = "puchi-sekai-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
zeromq = "0.4.1"
puchi-sekai-common = { path = "../common" }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.30", features = ["derive"] }
