[package]
name = "puchi-sekai"
version = "0.1.0"
description = "Little sekai in your desktop"
authors = ["skystar-p"]
edition = "2021"


[lib]
name = "puchi_sekai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
async-openai = "0.27.2"
thiserror = "2.0.11"
futures = "0.3.31"
envy = "0.4.2"
tokio = { version = "1.43.0", features = ["full"] }
base64 = "0.22.1"
zeromq = "0.4.1"
serde_json = "1.0.138"
puchi-sekai-common = { path = "../common" }
gtk = { version = "0.18.2", features = ["v3_24"] }
gtk-layer-shell = "0.8.2"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
